# tutorial-cbindgen

./: README.md  build.sh  generated_bindings.h  main.cpp
presentation-slides/: index.html  index.md  rust.css  sliderust.css  sliderust.js
rust-bindings/: Cargo.toml  cbindgen.toml  optional-build.rs
rust-bindings/src/: lib.rs
